# thesisssy

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
config/: cleandata.config.json
excel_extraction/components/: get_data.py  get_information.py
src/package/excel_data_extraction/: clean_data.py  excel_data.py  main.py  temp_functions.py
