[tool.poetry]
name = "thesisssy"
version = "0.1.0"
description = "extraction of data from excel file"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pandas = "^1.5.0"
pylint = "^2.15.4"
black = "^22.10.0"
python-dotenv = "^0.21.0"
openpyxl = "^3.0.10"
asyncio = "^3.4.3"
aiofiles = "^22.1.0"
fastapi = "^0.85.1"
uvicorn = {extras = ["standard"], version = "^0.18.3"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
